# cg-image-picker

./: README.md  __init__.py  image_chooser.py  image_chooser_preview.py  image_chooser_server.py  image_chooser_utility_nodes.py  image_preview_chooser.py  install.py  multi_latent_chooser.py  pyproject.toml  visual_image_loader.py
docs/: fabric-workflow.json  workflow.json
docs/testing/: image workflow.json  latent workflow.json  test.md
docs/unified/: readme.md
js/: image_chooser.js  image_chooser_hud.js  image_chooser_messaging.js  image_chooser_preview.js  image_chooser_prompt.js  logger.js  multipick_widget.js
