[project]
name = "cg-image-picker"
description = "A custom node that pauses the flow while you choose which image (or latent) to pass on to the rest of the workflow."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/chrisgoringe/cg-image-picker"

[tool.comfy]
PublisherId = ""
DisplayName = "cg-image-picker"
Icon = ""