[project]
name = "cg-image-picker"
description = "A custom node that pauses the flow while you choose which image or images (and/or latent or latents) to pass on to the rest of the workflow."
version = "2.15"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/chrisgoringe/cg-image-picker"

[tool.comfy]
PublisherId = "chrisgoringe"
DisplayName = "cg-image-picker"
Icon = ""
